src/objects/c2g__MassDeleteControlRecord__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>MassDeleteControlRecord</relationshipLabel>
        <relationshipName>MassDeleteControlRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BatchStatus__c</fullName>
        <label>Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__JobName__c</fullName>
        <label>JobName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__NotificationType__c</fullName>
        <formula>IF(AND(c2g__TotalNumberOfErrors__c=0,c2g__TotalNumberOfAborts__c=0,c2g__TotalNumberOfExternal__c=0), 
&apos;Successful&apos;, 
IF(c2g__TotalNumberOfErrors__c = c2g__TotalNumberOfLogs__c, 
&apos;Failure&apos;, 
IF(c2g__TotalNumberOfAborts__c &gt; 0, 
&apos;Failure&apos;, 
IF( c2g__TotalNumberOfExternal__c &gt; 0, 
&apos;Failure&apos;, 
&apos;Mixed&apos; 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__NumberAttemptedToProcess__c</fullName>
        <label>Number of records attempted to Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NumberOfQueuableErrors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Errors from Queuable Jobs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <formula>IF( c2g__NumberOfQueuableErrors__c = 0, 
			 	IF( c2g__TotalNumberOfRecordsDeleted__c =  c2g__NumberAttemptedToProcess__c, 
			 		&apos;Complete&apos;,
			 		&apos;Processing&apos;
			 	),
				&apos;Error&apos;
			)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>c2g__MassDeleteBatchLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__MassDeleteBatchLog__c.c2g__MassDeleteControlRecord__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>c2g__MassDeleteBatchLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__MassDeleteBatchLog__c.c2g__MassDeleteControlRecord__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>c2g__MassDeleteBatchLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__MassDeleteBatchLog__c.c2g__MassDeleteControlRecord__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryForeignKey>c2g__MassDeleteBatchLog__c.c2g__MassDeleteControlRecord__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfRecordsDeleted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Number Of Records Deleted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>zDeprecated:Mass Delete Control Record</label>
    <nameField>
        <displayFormat>MDCRLog{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Delete Control Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>